--- a/layouts/partials/docs/menu.html
+++ b/layouts/partials/docs/menu.html
@@ -6,16 +6,23 @@
 {{ end }}
 
 {{ partial "docs/inject/menu-before" . }}
-{{ partial "docs/menu-hugo" .Site.Menus.before }}
+  
+  <div class="book-submenu">
+    <h3>Security Incidents</h3>
+    {{ partial "docs/menu-hugo" .Site.Menus.incidents }}
+  </div>
 
-{{ if .Site.Params.BookMenuBundle }}
-  {{ partial "docs/menu-bundle" . }}
-{{ else }}
-  {{ partial "docs/menu-filetree" . }}
-{{ end }}
+  <div class="book-submenu">
+    <h3>Wiki</h3>
+    {{ partial "docs/menu-filetree" . }}
+  </div>
 
-{{ partial "docs/menu-hugo" .Site.Menus.after }}
-{{ partial "docs/inject/menu-after" . }}
+  <div class="book-submenu">
+    <h3>External</h3>
+    {{ partial "docs/menu-hugo" .Site.Menus.external }}
+  </div>
+    
+  {{ partial "docs/inject/menu-after" . }}
 </nav>
 
 <!-- Restore menu position as soon as possible to avoid flickering -->
