Fix order of preference for font fallback

--- a/assets/_fonts.scss
+++ b/assets/_fonts.scss
@@ -40,5 +40,5 @@ $font-path: "/fonts";
 }
 
 body {
-  font-family: "Roboto", "Font Awesome 6 Sharp", "Font Awesome 6 Brands", sans-serif;
+  font-family: "Roboto", sans-serif, "Font Awesome 6 Sharp", "Font Awesome 6 Brands";
 }
