--- a/layouts/partials/docs/menu.html
+++ b/layouts/partials/docs/menu.html
@@ -7,11 +7,27 @@
 
   {{ partial "docs/inject/menu-before" . }}
 
-  {{ define "menu-link" }}
-    {{ if .Page.Params.hide }}
-      {{ .Title }}
+  {{ $page := .Page }}
+
+  {{ define "menu-anchor" }}
+    {{ $isCurrent := hasPrefix .page.RelPermalink .item.RelPermalink | default false }}
+
+    {{ if .item.Page.Params.hide }}
+    <span
+      class="anchor"
+      {{ if $isCurrent }}aria-current="page"{{ end }}
+    >{{ .item.Title }}</span>
+
     {{ else }}
-      <a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a>
+      <a
+        class="anchor"
+        href="{{ .item.RelPermalink }}"
+        {{ if $isCurrent }}aria-current="page"{{ end }}
+      >{{ .item.LinkTitle }}</a>
+    {{ end }}
+
+    {{ if .control }}
+      <button class="collapsible-control"></button>
     {{ end }}
   {{ end }}
   
@@ -26,43 +42,30 @@
       <!-- show collapsibles only in sections with children -->
       {{ if (gt (.Pages | len) 0) }}
         <div class="submenu collapsible">
-          <h2>
-            {{ template "menu-link" . }}
-            <button class="collapsible-control"></button>
-          </h2>
-        
           {{ $ul2 = add .LinkTitle | urlize | lower }}
+          <h2>{{ template "menu-anchor" (dict "page" $page "item" . "control" true) }}</h2>
           <ul class="collapsible-target" id="ul2-{{ $ul2 }}">
             <!-- list sub sections -->
             {{ range .Pages }}
               {{ if eq .Kind "section" }}
                 <li class="subsection collapsible">
-                  <h3>
-                    {{ template "menu-link" . }}
-                    {{ if or (eq .Type "posts") .Pages }}
-                      <button class="collapsible-control"></button>
-                    {{ end }}
-                  </h3>
-
                   <!-- special case: posts -->
                   {{ if eq .Type "posts" }}
                     {{ $ul3 = add .LinkTitle | urlize | lower }}
+                    <h3>{{ template "menu-anchor" (dict "page" $page "item" . "control" true) }}</h3>
                     <ul class="taxonomies collapsible-target" id="ul3-{{ $ul2 }}-{{ $ul3 }}">
                       <!-- NOTE: Taxonomies are site-wide and not section-specific. -->
                       {{ range $taxonomy, $terms := site.Taxonomies }}
                         <li class="taxonomy collapsible">
                           {{ with site.GetPage $taxonomy }}
-                            <h4>
-                              {{ template "menu-link" . }}
-                              <button class="collapsible-control"></button>
-                            </h4>
+                            <h4>{{ template "menu-anchor" (dict "page" $page "item" . "control" true) }}</h4>
                           {{ end }}
                          
                           {{ with $terms }}
                             {{ $ul4 = add .LinkTitle | urlize | lower }}
                             <ul class="terms collapsible-target" id="ul4-{{ $ul2 }}-{{ $ul3 }}-{{ $ul4 }}">
                               {{ range . }}
-                                <li>{{ template "menu-link" .Page }}</li>
+                                <li>{{ template "menu-anchor" (dict "page" $page "item" .Page) }}</li>
                               {{ end }}
                             </ul>
                           {{ end }}
@@ -74,11 +77,14 @@
                   {{ else }}
                     {{ if .Pages }}
                       {{ $ul3 = add .LinkTitle | urlize | lower }}
+                      <h3>{{ template "menu-anchor" (dict "page" $page "item" . "control" true) }}</h3>
                       <ul class="pages collapsible-target" id="ul3-{{ $ul2 }}-{{ $ul3 }}">
                         {{ range .Pages }}
-                          <li>{{ template "menu-link" . }}</li>
+                          <li>{{ template "menu-anchor" (dict "page" $page "item" .) }}</li>
                         {{ end }}
                       </ul>
+                    {{ else }}
+                      <h3>{{ template "menu-anchor" (dict "page" $page "item" .) }}</h3>
                     {{ end }}
                   {{ end }}
                 </li>
@@ -88,9 +94,7 @@
         </div>
       {{ else }}
         <div class="submenu">
-          <h2>
-            {{ template "menu-link" . }}
-          </h2>
+          <h2>{{ template "menu-anchor" (dict "page" $page "item" .) }}</h2>
         </div>
       {{ end }}
     {{ end }}
@@ -107,10 +111,11 @@
 
     const sections = document.querySelectorAll(".collapsible")
     sections.forEach((item) => {
-      // const isCurrent = (content.querySelector(".current")) 
-      const isCurrent = true 
       const control = item.querySelector(".collapsible-control")
       const target = item.querySelector(".collapsible-target")
+      // FIXME: Taxonomies pages will not trigger section as current due to different paths
+      // const isCurrent = (control.previousElementSibling.getAttribute("aria-current"))
+      const isCurrent = true
 
       new Collapsible({
         control: control,
@@ -118,13 +123,13 @@
           element: target,
         },
         aria: {
-          expanded: true,
+          expanded: isCurrent ? true : false,
           controls: true
         },
       })
 
       // if (!isCurrent)
-      //   content.hidden = true    
+      //   target.hidden = true
     })
   </script>
     
