--- a/layouts/taxonomy/terms.html
+++ b/layouts/taxonomy/terms.html
@@ -4,12 +4,13 @@
   <ul class="taxonomy-list">
     {{ $lastDropCap := "" }}
     {{ $currDropCap := "" }}
+    {{ $lastElement := sub (len $paginator.Pages) 1 }}
 
-    {{ range $paginator.Pages }}
+    {{ range $index, $page := $paginator.Pages }}
       {{ $currDropCap = .Title | upper | truncate 1 "" }}
 
       {{ if not (eq $currDropCap $lastDropCap) }}
-        {{ if not (eq $lastDropCap "") }}
+        {{ if not (eq $index 0) }}
         </ul>
         {{ end }}
 
@@ -19,6 +20,10 @@
 
       {{ $lastDropCap = $currDropCap }}
           <a class="taxonomy-item" href="{{ .RelPermalink }}">{{ partial "docs/title.html" . }}</a>
+
+          {{ if (eq $index $lastElement) }}
+          </ul>
+          {{ end }}
     {{ end }}
   </ul>
 
