--- a/layouts/partials/docs/menu.html
+++ b/layouts/partials/docs/menu.html
@@ -1,3 +1,37 @@
+{{ define "taxonomies" }}
+  {{ $page := .page }}
+  {{ $section := .item }}
+  {{ $path := .path }}
+  {{ $level := add .level 1 }}
+
+  {{ range $taxonomy, $terms := site.Taxonomies }}
+    {{ with site.GetPage $taxonomy }}
+      {{ if (hasPrefix .RelPermalink $section.RelPermalink) }}
+        {{ $showTerms := .Params.navShowTerms | default false }}
+
+        <li class="taxonomy {{ if $showTerms }}collapsible{{ end }}">
+        <h{{ $level }}>{{ partial "docs/menu-anchor" (dict "page" $page "item" . "control" $showTerms) }}</h{{ $level }}>
+
+          {{ if $showTerms }}
+            {{ with $terms }}
+              {{ $name := .LinkTitle | urlize | lower }}
+              {{ $path = printf "%s-%s" $path $name }}
+              {{ $id := printf "ul%d-%s" $level $path }} 
+
+              <ul class="terms collapsible-target" id="{{ $id }}">
+                {{ range . }}
+                  <li>{{ partial "docs/menu-anchor" (dict "page" $page "item" .Page) }}</li>
+                {{ end }}
+              </ul>
+            {{ end }}
+          {{ end }}
+        </li>
+      {{ end }}
+    {{ end }}
+  {{ end }}
+{{ end }}
+
+
 <nav>
   {{ partial "docs/brand" . }}
   {{ partial "docs/search" . }}
@@ -6,90 +40,61 @@
   {{ end }}
 
   {{ partial "docs/inject/menu-before" . }}
-
-  {{ $page := .Page }}
-  {{ $expandTerms := site.Params.expandTerms | default false }}
-  
-  <div class="book-tree">
-    <!-- initialize sections ids -->
-    {{ $ul2 := "" }}
-    {{ $ul3 := "" }}
-    {{ $ul4 := "" }}
+ 
+  <ul class="book-tree">
+    {{ $page := .Page }}
+    {{ $name := "" }}
+    {{ $path := "" }}
+    {{ $id := "" }}
+    {{ $control := false }}
 
     <!-- list main sections -->
     {{ range site.Home.Pages }}
+      {{ $level := 2 }}
+      {{ $name = .LinkTitle | urlize | lower }}
+      {{ $path = $name }}
+      {{ $id = printf "ul%d-%s" $level $path }} 
+
       <!-- show collapsibles only in sections with children -->
-      {{ if (gt (.Pages | len) 0) }}
-        <div class="submenu collapsible">
-          {{ $ul2 = .LinkTitle | urlize | lower }}
-          <h2>{{ partial "docs/menu-anchor" (dict "page" $page "item" . "control" true) }}</h2>
-          <ul class="collapsible-target" id="ul2-{{ $ul2 }}">
-            <!-- list sub sections -->
-            {{ range .Pages }}
-              {{ if eq .Kind "section" }}
-                <li class="subsection collapsible">
-                  <!-- special case: posts -->
-                  {{ if eq .Type "posts" }}
-                    {{ $subsection := . }}
-                    {{ $ul3 = .LinkTitle | urlize | lower }}
-                    <h3>{{ partial "docs/menu-anchor" (dict "page" $page "item" . "control" true) }}</h3>
-                    <ul class="taxonomies collapsible-target" id="ul3-{{ $ul2 }}-{{ $ul3 }}">
-                      <!-- NOTE: Taxonomies are site-wide and not section-specific. -->
-                      {{ range $taxonomy, $terms := site.Taxonomies }}
-                        {{ with site.GetPage $taxonomy }}
-                          {{ if (hasPrefix .RelPermalink $subsection.RelPermalink) }}
-                            <li class="taxonomy {{ if $expandTerms }}collapsible{{ end }}">
-                              <h4>{{ partial "docs/menu-anchor" (dict "page" $page "item" . "control" $expandTerms) }}</h4>
+      {{ $control = (gt (.Pages | len) 0) }}
+      <li class="li-h{{ $level }} {{ if $control }}collapsible{{ end }}">
+        <h{{ $level }}>{{ partial "docs/menu-anchor" (dict "page" $page "item" . "control" $control) }}</h{{ $level }}>
+        <ul class="collapsible-target" id="{{ $id }}">
+          <!-- list sub sections -->
+          {{ range .Pages }}
+            {{ $level = 3 }}
+            {{ $name = .LinkTitle | urlize | lower }}
+            {{ $path = printf "%s-%s" $path $name }}
+            {{ $id = printf "ul%d-%s" $level $path }} 
 
-                              {{ if $expandTerms }}
-                                {{ with $terms }}
-                                  {{ $ul4 = .LinkTitle | urlize | lower }}
-                                  <ul class="terms collapsible-target" id="ul4-{{ $ul2 }}-{{ $ul3 }}-{{ $ul4 }}">
-                                    {{ range . }}
-                                      <li>{{ partial "docs/menu-anchor" (dict "page" $page "item" .Page) }}</li>
-                                    {{ end }}
-                                  </ul>
-                                {{ end }}
-                              {{ end }}
-                            </li>
-                          {{ end }}
-                        {{ end }}
-                      {{ end }}
-                    </ul>
+            <li class="li-h{{ $level }} collapsible">
+              {{ $control = (or (.Param "navShowPages") (.Param "navShowTaxonomies")) }}
+              <h{{ $level }}>{{ partial "docs/menu-anchor" (dict "page" $page "item" . "control" $control) }}</h{{ $level }}>
 
-                  <!-- other cases -->
-                  {{ else }}
-                    {{ if .Pages }}
-                      {{ $ul3 = .LinkTitle | urlize | lower }}
-                      <h3>{{ partial "docs/menu-anchor" (dict "page" $page "item" . "control" true) }}</h3>
-                      <ul class="pages collapsible-target" id="ul3-{{ $ul2 }}-{{ $ul3 }}">
-                        {{ range .Pages }}
-                          <li>{{ partial "docs/menu-anchor" (dict "page" $page "item" .) }}</li>
-                        {{ end }}
-                      </ul>
-                    {{ else }}
-                      <h3>{{ partial "docs/menu-anchor" (dict "page" $page "item" .) }}</h3>
-                    {{ end }}
-                  {{ end }}
-                </li>
+              {{ if .Param "navShowTaxonomies" }}
+                <ul class="taxonomies collapsible-target" id="{{ $id }}">
+                  {{ template "taxonomies" (dict "page" $page "item" . "level" $level "path" $path) }}
+                </ul>
               {{ end }}
-            {{ end }}
-          </ul>
-        </div>
-      {{ else }}
-        <div class="submenu">
-          <h2>{{ partial "docs/menu-anchor" (dict "page" $page "item" .) }}</h2>
-        </div>
-      {{ end }}
+
+              {{ if .Param "navShowPages" }}
+                <ul class="pages collapsible-target" id="{{ $id }}">
+                  {{ range .Pages }}
+                    <li>{{ partial "docs/menu-anchor" (dict "page" $page "item" .) }}</li>
+                  {{ end }}
+                </ul>
+              {{ end }}
+            </li>
+          {{ end }}
+        </ul>
+      </li>
     {{ end }}
 
-    <!-- list global taxonomies -->
-
-    <div class="submenu external-links">
+    <li class="li-h2 external-links">
       <h2>External</h2>
       {{ partial "docs/menu-hugo" .Site.Menus.external }}
-    </div>
-  </div>
+    </li>
+  </ul>
 
   {{ partial "docs/inject/menu-after" . }}
 </nav>
