Make menu fully recursive

--- a/layouts/partials/docs/menu-anchor.html
+++ b/layouts/partials/docs/menu-anchor.html
@@ -14,6 +14,6 @@
     >{{ .item.LinkTitle }}</a>
   {{ end }}
 
-  {{ if .control }}
+  {{ if .showControls }}
     <button class="collapsible-control"></button>
   {{ end }}
