--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -126,3 +126,13 @@
     max-height: 50%;
   }
 }
+
+
+figure {
+  figcaption {
+      font-size: .9em;
+      font-style: italic;
+      font-weight: 600;
+      text-align: center;
+    }
+}
