Restrict navHideLink to navigation menu
So it does not affect the taxonomies menu.

--- a/layouts/partials/docs/menu-anchor.html
+++ b/layouts/partials/docs/menu-anchor.html
@@ -1,6 +1,6 @@
   {{ $isCurrent := hasPrefix .page.RelPermalink .item.RelPermalink | default false }}
 
-  {{ if .item.Page.Params.navHideLink }}
+  {{ if .hideLink }}
     <span
       class="anchor"
       {{ if $isCurrent }}aria-current="page"{{ end }}
