--- a/layouts/partials/docs/menu-filetree.html
+++ b/layouts/partials/docs/menu-filetree.html
@@ -43,7 +43,7 @@
     {{ $path = $name }}
   {{ end }}
 
-  {{ $id := printf "ul%d-%s" $level $path }}
+  {{ $id := printf "book-tree-ul%d-%s" $level $path }}
 
   {{ $showPages := (and (.item.Param "navShowPages") (gt (.item.Pages | len) 0)) | default false }}
   {{ $showTaxonomies := .item.Param "navShowTaxonomies" | default false }}
@@ -84,26 +84,3 @@
     </li>
   {{ end }}
 </ul>
-
-<script type="module">
-  import Collapsible from "/js/collapsible.js"
-
-  const sections = document.querySelectorAll(".collapsible")
-
-  sections.forEach((item) => {
-    const control = item.querySelector(".collapsible-control")
-    const target = item.querySelector(".collapsible-target")
-
-    new Collapsible({
-      control: control,
-      target: {
-        element: target,
-      },
-      aria: {
-        expanded: (target.hidden == true) ? false : true,
-        controls: true
-      },
-      debug: false
-    })
-  })
-</script>
