--- a/layouts/partials/docs/menu-filetree.html
+++ b/layouts/partials/docs/menu-filetree.html
@@ -14,7 +14,7 @@
 
           {{ if $showTerms }}
             {{ with $terms }}
-              {{ $name := .LinkTitle | urlize | lower }}
+              {{ $name := .item.LinkTitle | urlize | lower }}
               {{ $path = printf "%s-%s" $path $name }}
               {{ $id := printf "ul%d-%s" $level $path }} 
 
@@ -33,29 +33,26 @@
 
 {{ define "menu" }}
   {{ $page := .page }}
-  {{ $path := .path }}
+  {{ $path := "" }}
   {{ $level := add .level 1 }}
+  {{ $name := .item.LinkTitle | urlize | lower }}
 
-  {{ $name := "" }}
-  {{ $id := "" }}
-
-  {{ $name = .LinkTitle | urlize | lower }}
-
-  {{ if $path }}
-    {{ $path = printf "%s-%s" $path $name }}
+  {{ if .path }}
+    {{ $path = printf "%s-%s" .path $name }}
   {{ else }}
     {{ $path = $name }}
   {{ end }}
 
-  {{ $id = printf "ul%d-%s" $level $path }} 
+  {{ $id := printf "book-tree-ul%d-%s" $level $path }}
 
   {{ $showPages := (and (.item.Param "navShowPages") (gt (.item.Pages | len) 0)) | default false }}
   {{ $showTaxonomies := .item.Param "navShowTaxonomies" | default false }}
   {{ $isCollapsible := (or $showPages $showTaxonomies) | default false }}
   {{ $isCollapsed := .item.Param "bookCollapseSection" | default false  }}
+  {{ $hideLink := .item.Page.Params.navHideLink | default false }}
 
   <li class="li-h{{ $level }} {{ if $isCollapsible }}collapsible{{ end }}">
-    <h{{ $level }}>{{ partial "docs/menu-anchor" (dict "page" $page "item" .item "showControls" $isCollapsible) }}</h{{ $level }}>
+    <h{{ $level }}>{{ partial "docs/menu-anchor" (dict "page" $page "item" .item "showControls" $isCollapsible "hideLink" $hideLink) }}</h{{ $level }}>
 
     {{ if $showTaxonomies }}
       <ul class="taxonomies collapsible-target" id="{{ $id }}">
@@ -76,7 +73,7 @@
 <ul class="book-tree">
   {{ range site.Home.Pages }}
     {{ if not (.Param "navHide") }}
-      {{ template "menu" (dict "page" . "item" . "level" 1 "path" "") }}
+      {{ template "menu" (dict "page" . "item" . "level" 1) }}
     {{ end }}
   {{ end }}
   
@@ -87,26 +84,3 @@
     </li>
   {{ end }}
 </ul>
-
-<script type="module">
-  import Collapsible from "/js/collapsible.js"
-
-  const sections = document.querySelectorAll(".collapsible")
-
-  sections.forEach((item) => {
-    const control = item.querySelector(".collapsible-control")
-    const target = item.querySelector(".collapsible-target")
-
-    new Collapsible({
-      control: control,
-      target: {
-        element: target,
-      },
-      aria: {
-        expanded: (target.hidden == true) ? false : true,
-        controls: true
-      },
-      debug: false
-    })
-  })
-</script>
